--- a/CreateiBeacon/CreateiBeacon.csproj
+++ b/CreateiBeacon/CreateiBeacon.csproj
@@ -29,12 +29,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Communication.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="InfoWeb.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
